--- a/templates/portal.html
+++ b/templates/portal.html
@@ -117,7 +117,7 @@
                                           <option value="9">9 or more</option>
                                           <option value="10">10 or more</option>
                                         </select>
-                                        <p class="remove_button">-</p>
+                                        <p class="remove_button">&#8854;</p>
                                       </div>`;
                               if(x < maxField){
                                   x++; //Increment field counter
