--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -302,13 +302,19 @@ input[type=text]:placeholder {
 p.add_button {
   font-size: 30px;
   position: relative;
-  line-height: 35px;
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  vertical-align: bottom;
 }
 
 p.remove_button{
   font-size: 30px;
   position: relative;
-  line-height: 35px;
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  vertical-align: bottom;
 }
 
 .form-tooltip{
