--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -276,6 +276,10 @@ input[type=text]:placeholder {
   width: 35%;
 }
 
+#discount-amount-group .mb-3 {
+  margin-bottom: .5rem!important;
+}
+
 #discount-date-range-group {
   display: inline-flex;
   width: 100%;
@@ -335,7 +339,8 @@ p.remove_button{
 
 }
 
-.form-tooltip p {
+p.form-tooltip {
+
   font-size: 10px;
 }
 
