--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -271,13 +271,17 @@ input[type=text]:placeholder {
   display: inline-flex;
 }
 
+p.req-info {
+  font-size: 10px;
+}
+
 #discount-amount-group {
   display: block;
   width: 35%;
 }
 
 #discount-amount-group .mb-3 {
-  margin-bottom: .5rem!important;
+  margin-bottom: .25rem!important;
 }
 
 #discount-date-range-group {
@@ -333,15 +337,6 @@ p.remove_button{
   height: 50px;
   text-align: center;
   vertical-align: bottom;
-}
-
-.form-tooltip{
-
-}
-
-p.form-tooltip {
-
-  font-size: 10px;
 }
 
 .tooltip-inner{
