--- a/templates/portal.html
+++ b/templates/portal.html
@@ -141,6 +141,15 @@
                         });
 
                         $('[data-toggle="tooltip"]').tooltip()
+
+                        $('#product_selectall').click(function(event) {
+                          const productsTable = document.getElementById("table-products");
+                          const checkBoxes = productsTable.getElementsByTagName("INPUT");
+                          for(i = 0; i < checkBoxes.length; i++){
+                            checkBoxes[i].checked = source.checked;
+                          }
+                        });
+                        
                     } else {
                         forceLogout(resPortal.error);
                     }
