--- a/templates/portal.html
+++ b/templates/portal.html
@@ -143,6 +143,7 @@
                         $('[data-toggle="tooltip"]').tooltip()
 
                         $('#product-selectall').on('click', '#product-selectall', function(event){
+                          console.log("ITS HERE AND IT WAS CALLED");
                           const productsTable = document.getElementById("table-products");
                           const checkBoxes = productsTable.getElementsByTagName("INPUT");
                           for(i = 0; i < checkBoxes.length; i++){
