--- a/templates/portal.html
+++ b/templates/portal.html
@@ -145,9 +145,9 @@
                         $("#product-selectall").click(function(){  //"select all" change
                           console.log("HERE");
                           if ($(this).hasClass('allChecked')) {
-                              $('input[type="checkbox"]', '#example').prop('checked', false);
+                              $('input[type="checkbox"]', '#table-products').prop('checked', false);
                           } else {
-                              $('input[type="checkbox"]', '#example').prop('checked', true);
+                              $('input[type="checkbox"]', '#table-products').prop('checked', true);
                           }
                           $(this).toggleClass('allChecked');
                         });
